<resources>
    <string name="app_name">Scheduler Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">CANCEL</string>
    <string name="add_task">ADD TASK</string>
    <string name="select_date">SELECT DATE</string>
    <string name="selected_date">Selected Date</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="update_task">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>